--- a/src/css/CartPage.module.css
+++ b/src/css/CartPage.module.css
@@ -1,40 +1,49 @@
+* { box-sizing: border-box; }
+
 .cartPage-style {
   background: #F5F7F6;
+  height: 130%;
   display: flex;
   justify-content: center;
 }
 
-.cart-rubrik {
-  margin: 100px auto 10px auto;
-  font-size: 2rem;
+.back-button {
+  margin-left: -80px;
+  height: 100%;
 }
 
-.back-button {
-  height: 100%;
+.cart-rubrik {
+  margin-top: 5vw;
+  font-size: 2rem;
 }
 
 .product-container {
   margin:5px; 
+  margin-left: 15vw;
   padding:5px; 
   width: 50vw; 
-  height: 550px; 
+}
+
+.product {
+  height: 500px;
   overflow: scroll; 
   text-align:justify; 
 }
 
-.fields {
-  width: 25%;
-}
-
 .forms {
-  width: 25%;
+  width: 25vw;
+  height: 40vw;
   margin-top: 25px;
   padding: 10px;
   background-color: white;
 }
 
-.shipping-field {
-  position: fixed;
+.billing {
+  width: 100%;
+}
+
+.shipping {
+  width: 100%;
 }
 
 .buyButton {
@@ -57,13 +66,22 @@
     justify-content: center;
   }
 
+  .back-button {
+    height: 100%;
+    margin-top: -30px;
+    margin-left: -20px;
+  }
+  
+
   .cart-rubrik {
     margin-top: -20px;
+    margin-bottom: 10px;
   }
 
   .product-container {
-    height: 250px;
-    width: 130%;
+    height: 330px;
+    margin-left: 10%;
+    width: 100%;
   }
   
   .buyButton {
@@ -75,6 +93,8 @@
 
   .forms {
   display: flex;
+  width: 100%;
+  
   }
 
   .billing {
