--- a/src/css/CartProduct.module.css
+++ b/src/css/CartProduct.module.css
@@ -15,8 +15,8 @@
 }
 
 .product-image img {
- width: 200px;
- height: 150px;
+ width: 15vw;
+ height: 10vw;
  margin-right: 30px;
 }
 
@@ -82,6 +82,8 @@ display: inline-block;
   margin-right: 10px;
 }
 .trashcan {
+  height: auto;
+  width: auto;
   cursor: pointer;
 }
 
@@ -105,5 +107,15 @@ span.isdiscount {
 
 span.undiscount{
   visibility: hidden;
+}
+
+
+@media (max-width: 768px){
+  
+  .product-image img {
+    width: 150px;
+    height: 100px;
+  }
+
 }
 
