--- a/src/css/login.module.css
+++ b/src/css/login.module.css
@@ -9,17 +9,21 @@
 .errorBox.inactive {
     display: none
 }
-.loginContainer{
-    padding-top:50px;
-}
-.loginContainer >h1{
-    text-align: center;
-}
 .singInButton {
     background-color: #FE7F50 ;
     width: 30%;
-    margin : 0 auto; 
-    padding: 5px;
     border: none;
   }
-  
+
+
+
+  /* LoginPage.js style*/
+  .toggleText{
+      cursor: pointer;
+      margin-top:2rem;
+      text-align: center;
+      text-decoration: underline;
+  }
+  .toggleText:hover{
+      color:#FE7F50
+  }
