--- a/src/css/PreventPurchase.module.css
+++ b/src/css/PreventPurchase.module.css
@@ -1,38 +1,51 @@
 .loginErrorBox {
-    position: absolute;
-    background-color: rgba(49, 49, 49, 0.8);
-    width: 100vw;
-    height: 100vh;
+    position: fixed;
+    background-color: #141a1ae6;
+    width: 100%;
+    height: 100%;
     text-align: center;
 }
 
 .messageBox {
+    color: white;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    background-color: rgb(75, 75, 75);
-    margin: 25% auto 0 auto;
+    margin: 20% auto 0 auto;
     padding: 20px 20px;
     width: 40%;
     height: 30%;
-    border-radius: 6px;
+    border-radius: 2px;
 }
 
-.buttonBox {
-    margin-top: 10px;
+.messageBox img {
+    align-self: center;
+    width: 80%;
+}
+
+.messageBox span {
+    margin: 15px 0 15px 0;
+    font-size: 14px;
 }
 
 .yesButton {
-    background-color: green;
-    padding: 10px 40px;
-    border: none;
-    border-radius: 6px;
-    margin-right: 30px;
+    align-self: center;
+    background-color: #FE7F50;
+    color: white;
+    padding: 6px 40px;
+    width: 50%;
+    border: 1px solid #FE7F50;
+    border-radius: 2px;
+    transition: .3s;
 }
 
-.noButton {
-    background-color: red;
-    padding: 10px 40px;
-    border: none;
-    border-radius: 6px;
+.yesButton:hover {
+    background-color: transparent;
+    border: 1px solid #FE7F50;
+}
+
+img.exitButton {
+    cursor: pointer;
+    margin-top: 20px;
+    width: 20px;
 }
