--- a/src/css/CartPage.module.css
+++ b/src/css/CartPage.module.css
@@ -122,8 +122,6 @@
     justify-content: center;
   }
 
-
-
   .product-container {
     margin-left: 0px;
     width: 100%;
@@ -145,5 +143,11 @@
 
   .shipping {
     width: 100%;
+  }
+
+  .buyButton {
+    display: grid;
+    justify-content: center;
+    left: 0;
   }
 }
