--- a/src/css/Car.module.css
+++ b/src/css/Car.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   max-width: 340px;
   width: 100%;
-  height: 500px;
+  height: 450px;
   overflow: hidden;
   box-shadow: 0 0 5px #ccc;
   margin: 40px;
@@ -16,19 +16,16 @@
   box-shadow: 0 0 21px rgba(33,33,33,.2); 
 }
 
-.car img{
+.imageBox img{
   width: 430px;
   height: 220px;
   display: block;
   object-fit: cover;
 }
 
-
 .cartBox img {
   width:30px;
   height:25px;   
-
-  
 }
 
 .car .boxDetails{
@@ -41,10 +38,9 @@
 .boxDetails h2{
   display: flex;
   justify-content: flex-start;
-  font-weight:bold;
   font-family: 'Lato';
   color:#030303;
-  font-size: 19px;
+  font-size: 1.2rem;
 }
 
 .boxDetails p{
@@ -66,25 +62,30 @@
   }
 
   .car .boxDetails h4{
-    font-weight:bold;
     display: flex;
     justify-content: space-between;
-    color:#030303;
-    font-size: 1rem;
   }
 
   .location {
     display: flex;
     justify-content: flex-start;
+    font-family: Roboto;
+    font-size:16px;
+  }
+  .location img{
+    height:15px;
+    width:15px;
+    margin-top: 3px;
+    margin-right: 13px;
   }
 
   .car .boxDetails .isdiscount {
     color: #FE7F50;
-    font-size: 1rem;
+    font-size: 1.4rem;
   }
   .car .boxDetails .undiscount{
     color:black;
-    font-size: 1rem;
+    font-size: 1.4rem;
   }
 
 .car .boxDetails button{
