--- a/src/css/Navbar.module.css
+++ b/src/css/Navbar.module.css
@@ -8,3 +8,49 @@
   color:#FE7F50;
   text-decoration: none;
 }
+
+.carBox {
+  padding: 10px 10px;
+  border-bottom: 1px solid rgb(202, 202, 202);
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.carBox:last-of-type {
+  margin-bottom: 10px;
+}
+
+.carDescription span {
+  display: block;
+  text-align: start;
+}
+
+.carDescription .carName {
+  font-size: 12px;
+}
+
+.carDescription .carYear {
+  font-size: 10px;
+}
+
+.carDescription .carPrice {
+  font-size: 12px;
+  font-weight: 600;
+}
+
+.cartCars .removeButton {
+  cursor: pointer;
+  height: 15px;
+  align-self: center;
+  margin-left: auto;
+}
+
+.cartCars .carImage {
+  height: 50px;
+  margin: 0 10px;
+}
+
+.totalOrder {
+  font-weight: 600;
+}
