--- a/src/custom.scss
+++ b/src/custom.scss
@@ -35,6 +35,7 @@ $fourth:#ffc8b4;
     right: 0;
     left: auto;
     text-align: center;
+    width: 250px;
 }
 .dropdown-toggle::after {
     display: none;
