--- a/src/css/Car.module.css
+++ b/src/css/Car.module.css
@@ -81,7 +81,7 @@
 
   .car .boxDetails .isdiscount {
     color: #FE7F50;
-    font-size: 1.4rem;
+    font-size: 1.3rem;
   }
   .car .boxDetails .undiscount{
     color:black;
@@ -146,9 +146,9 @@ span.undiscount {
   .car {
     max-width: 300px;
     margin: 15px;
-    height: 460px;
+    height: 435px;
   }
-  .car img{
+  .imageBox img{
     width: 100%;
     height: 100%;
     display: block;
@@ -158,7 +158,7 @@ span.undiscount {
   .boxDetails{
     padding: 0;
   }
-  .boxDetails img{
+  .cartBox img{
     width: 40px;
     height: 35px;
   }
@@ -173,7 +173,7 @@ span.undiscount {
     margin: 15px 0;
   }
 
-  .car img{
+  .imageBox img{
     width: 100%;
     height: 100%;
     display: block;
@@ -183,7 +183,7 @@ span.undiscount {
   .boxDetails{
     padding: 0;
   }
-  .boxDetails img{
+  .cartBox img{
     width: 40px;
     height: 35px;
   }
