--- a/src/css/productpage.module.css
+++ b/src/css/productpage.module.css
@@ -5,15 +5,23 @@
 
   .image-container img {
     width: 100%;
-    max-width: 510px;
-    max-height: 400px;
+    width: 410px;
+    height: 300px;
   }
 
   .product-details .product-info h1 {
     display: inline-block;
-    font-size: 44px;
+    font-size: 0.8rem;
+  }
+
+  .productmakemiles h4 {
+    font-size: 1.1rem;
   }
   
+  .image-container h4 {
+    font-size: 1.1rem;
+  }
+
   .image-container {
     position: relative;
     /* display: flex;
@@ -64,7 +72,7 @@
   }
   
   .product-details .product-heading {
-    font-size: 44px;
+    font-size: 1.1rem;
     color: #000000;
   }
   
@@ -82,7 +90,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     font-weight: 100;
   }
 
@@ -92,30 +100,31 @@
   }
   
   .product-details .product-makemiles h4 {
-    font-size: 29px;
+    font-size: 1.3rem;
   }
   
   .product-details .product-city-year h6 {
-    font-size: 18px;
+    font-size: 1.3rem;
   }
   
   .product-details .product-info {
     display: inline-block;
       margin-bottom: 0px;
-    font-size: 37px;
+    font-size: 1.1rem;
     color: #000000;
   }
   
   .product-details p {
-    font-size: 20px;
+    font-size: 1.1rem;
     color: #707070;
     max-width: 920px;
     text-align: left;
   }
   
   .product-details .product-price {
-    font-size: 30px;
-    margin-right: 30px;
+    font-size: 1.1rem;
+    margin-right: 18px;
+    font-weight: 500
   }
   
   .product-details button {
@@ -127,15 +136,45 @@
   
   .product-details img {
     margin-top: -15px;
-    width: 44px;
-    height: 40px;
+    width: 36px;
+    height: 31px;
   }
 
   .h1Carousel {
     margin-left: 2rem;
     margin-top: 2rem;
+    font-size: 1.4rem;
   }
 
+  .formH4 {
+    font-size: 1.1rem;
+    text-align: center;
+  }
+
+  .subscribe {
+    text-align: center;
+    margin-bottom: 3rem;
+  }
+
+  input[type="text"] {
+    margin-right: 2rem;
+  }
+
+  .check {
+    width: 15px;
+    height: 20px;
+    margin-right: 0.5rem;
+  }
+
+  .top1 {
+    display: flex;
+    align-content:flex-start;
+    /* flex-direction: column; */
+  }
+
+  .top1 h4 {
+    font-size: 1.1rem;
+  }
   /* .carousel {
     display: flex;
     flex-direction: column;
