--- a/src/css/Confirmation.module.css
+++ b/src/css/Confirmation.module.css
@@ -32,7 +32,6 @@
 }
 
 .details {
-  color: gray;
   font-weight: 300;
   font-family: 'Roboto Condensed';
   text-align: center;
@@ -66,6 +65,23 @@
 
 .carDetails {
   padding-bottom: .9rem;
+}
+
+.logo{
+ margin:45px 85px -10px;
+}
+
+.information{
+  margin-top:2rem;
+  margin-bottom:3rem ;
+}
+
+.information >p{
+  font-weight: 300;
+  font-family: 'Roboto Condensed';
+  text-align: center;
+  font-size:.8rem;
+  line-height: .2rem;
 }
 
 .printButton {
