--- a/src/custom.scss
+++ b/src/custom.scss
@@ -6,9 +6,10 @@ $theme-colors: (
     "primary":#FE7F50,
 );
 $first:#FE7F50;
-$second:#344648;
+$second:#EDB518;
 $third:#F5F7F6;
 $fourth:#ffc8b4;
+
 @import "react-bootstrap-range-slider/dist/react-bootstrap-range-slider.scss";  
 @import "~bootstrap/scss/bootstrap";
 @use "sass:color";
@@ -67,37 +68,96 @@ $fourth:#ffc8b4;
 .dropdown-item.active, .dropdown-item:active{
     background-color:$first;
 }
-.fadeout {
-    text-align:center;
-    color: #000;
-    text-align: center;
-    opacity: 0;
-      -webkit-animation: fadeout 4s; /* Safari, Chrome and Opera > 12.1 */
-         -moz-animation: fadeout 4s; /* Firefox < 16 */
-          -ms-animation: fadeout 4s; /* Internet Explorer */
-           -o-animation: fadeout 4s; /* Opera < 12.1 */
-              animation: fadeout 4s;
-  }
-  
-  @keyframes fadeout {
- 
-      0% {
-        opacity: 1;
-      }
-      50% {
-        opacity: 0.5; 
-      }
-      100% {
-        opacity: 0; 
-      }
-  }
+
 
 .About{
     text-align: center;
- background: url("/assets/images/hero.png");
-background-size: cover;
+    .AboutUs{
+        text-align: center;
+        background-color: #fff;
+        width: 20rem;
+        box-shadow: 0 1px 3px #00000017;
+        padding: 33px 39px;
+        display: flex;
+        flex-direction: column;
+        margin-left: auto;
+        margin-right: 3rem;
+        margin-top: 2rem;
+        margin-bottom: -8rem;
+    }
+    .Jumbotron{
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.numberContainer{
+    display: flex;
+    justify-content: space-around;
+    margin: 2em;
+    flex-direction: column;
+    width: 80%;
+    margin-top:8em;
+}
+.number{
+    h2{
+        color:$second;
+        font-size:5rem;
+        font-weight: 600;
+    } 
+    p{
+        color:#000;
+        font-size:1rem; 
+    }
+}
+.text{
+    text-align: left;
+    font-weight: 600;
+}
+.GoalContainer {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 3rem;
+     h3{
+        color:$first;
+        font-size:3rem;
+        font-weight: 600; 
+        margin-top:2rem;
+     }
+     p{
+        color:#000;
+        font-size:1rem; 
+        margin:3rem;
+    }
+    .GoalImage img{
+        width:302px;
+        height:200px;
+    }
+}
+}
+
+@media only screen and (min-width: 576px) 
+{
+    .About{
+   .AboutUs  {
+    margin-top: 11rem;
+        }
+    .numberContainer{ 
+        flex-direction: row;
+        margin-top:4em;
+    }
+     .GoalContainer{ 
+        flex-direction: row;
+        margin-top:4em;
+  
+    .GoalImage img{
+        width:510px;
+        height:340px;
+    }
+    }
+}
 
 }
+
+
 
 .rangeSlider::-webkit-slider-thumb {
     color: #ff7f50;
