--- a/src/css/CartPage.module.css
+++ b/src/css/CartPage.module.css
@@ -6,18 +6,13 @@
   justify-content: center;
 }
 
-.back-button {
-  margin-left: -80px;
-  height: 100%;
-}
-
 .cart-rubrik {
   margin-top: 2vw;
   font-size: 2rem;
 }
 
 .product-container {
-  margin:5px; 
+  margin: 2rem 5px 5px 5px; 
   margin-left: 15vw;
   width: 50vw; 
 }
@@ -52,6 +47,15 @@
   /* margin-bottom: 5rem; */
 }
 
+/*====================== Empty Cart styles =================================*/
+
+.EmptyCartBox {
+  height: 90vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
 .EmptyCartBox img {
   width: 200px;
 }
@@ -69,6 +73,7 @@
   text-align: center;
 }
 
+/*====================== Medias =================================*/
 
 @media (max-width: 768px){
 
