--- a/src/css/addedToCart.module.css
+++ b/src/css/addedToCart.module.css
@@ -2,7 +2,7 @@
     position: fixed;
     top: 0px;
     background-color: #141a1ae6;
-    width: 100%;
+    width: 100vw;
     height: 100%;
     text-align: center;
 }
@@ -12,9 +12,10 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin: 10% auto 0 auto;
+    margin: auto auto 0 auto;
     padding: 20px 20px;
     max-width: 400px;
+    height: 100vh;
     border-radius: 2px;
 }
 
@@ -47,4 +48,9 @@ img.exitButton {
     cursor: pointer;
     margin-top: 20px;
     width: 20px;
+    transition: .3s;
 }
+
+img.exitButton:hover {
+    width: 25px;
+} 
