--- a/src/css/productpage.module.css
+++ b/src/css/productpage.module.css
@@ -1,316 +1,190 @@
 .product-page {
-    margin: 50px auto 0 auto;
-    width: 800px;
-  }
+  margin: 50px auto 0 auto;
+  width: 800px;
+}
 
-  .image-container img {
-    /* width: 100%; */
-    width: 410px;
-    height: 300px;
-  }
+.image-container img {
+  width: 100%;
+  max-width: 510px;
+  max-height: 400px;
+}
 
-  .product-details .product-info h1 {
-    display: inline-block;
-    font-size: 0.8rem;
-  }
+.product-details .product-info h1 {
+  display: inline-block;
+  font-size: 44px;
+}
 
-  .productmakemiles h4 {
-    font-size: 1.1rem;
-  }
-  
-  .image-container h4 {
-    font-size: 1.1rem;
-  }
+.image-container {
+  position: relative;
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+}
 
-  .image-container {
-    position: relative;
-    /* display: flex;
-    justify-content: center;
-    align-items: center; */
-  }
-  
-  span.purchasedBox {
-    width: 177px;
-    background-color: #fe7f50;
-    color: white;
-    font-weight: 600;
-    text-align: center;
-    padding: 20px 40px;
-    margin-left: 8rem;
-    position: absolute;
-    top: 150px;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
-  
-  span.notPurchased {
-    visibility: hidden;
-  }
-  
-  span.purchased {
-    visibility: visible;
-  }
-  
-  span.discountTag {
-    position: absolute;
-    top: 30px;
-    left: 10%;
-    height: 50px;
-    width: 50px;
-    background-color: #fe7f50;
-    border-radius: 50%;
-    color: white;
-    text-align: center;
-    padding: 12px 5px;
-    font-weight: 600;
-    margin-left: 1.3rem;
-  }
-  
-  span.isdiscount {
-    visibility: visible;
-  }
-  
-  span.undiscount {
-    visibility: hidden;
-  }
-  
-  .product-details .product-heading {
-    font-size: 1.1rem;
-    color: #000000;
-  }
-  
-  .product-details .details1 {
-    display: flex;
-    padding-top:0.5rem;
-  }
+span.purchasedBox {
+  background-color: #fe7f50;
+  color: white;
+  font-weight: 600;
+  text-align: center;
+  padding: 20px 40px;
+  position: absolute;
+  top: 150px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 
-  .pointer { 
-      cursor: pointer; 
-  }
-  
-  .product-details .product-makemiles {
-    margin-right: 113px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    font-size: 1.3rem;
-    font-weight: 100;
-  }
+span.notPurchased {
+  visibility: hidden;
+}
 
-  .product-details .product-city-year {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .product-details .product-makemiles h4 {
-    font-size: 1.3rem;
-  }
-  
-  .product-details .product-city-year h6 {
-    font-size: 1.3rem;
-  }
-  
-  .product-details .product-info {
-    display: inline-block;
-      margin-bottom: 0px;
-    font-size: 1.1rem;
-    color: #000000;
-  }
-  
-  .product-details p {
-    font-size: 1.1rem;
-    color: #707070;
-    max-width: 920px;
-    text-align: left;
-  }
-  
-  .product-details .product-price {
-    font-size: 1.1rem;
-    margin-right: 18px;
-    font-weight: 500;
-    font-family: 'Roboto Condensed';
-  }
-  
-  .product-details button {
-    padding: 10px 20px;
-    background-color: #ffffff;
-    color: white;
-    border: none;
-  }
-  
-  .product-details img {
-    margin-top: -15px;
-    width: 36px;
-    height: 31px;
-  }
+span.purchased {
+  visibility: visible;
+}
 
-  .h1Carousel {
-    margin-left: 2rem;
-    margin-top: 2rem;
-    font-size: 1.4rem;
-  }
+span.discountTag {
+  position: absolute;
+  top: 30px;
+  left: 10%;
+  height: 50px;
+  width: 50px;
+  background-color: #fe7f50;
+  border-radius: 50%;
+  color: white;
+  text-align: center;
+  padding: 12px 5px;
+  font-weight: 600;
+}
 
-  .formH4 {
-    font-size: 1.1rem;
-    text-align: center;
-  }
+span.isdiscount {
+  visibility: visible;
+}
 
-  .subscribe {
-    text-align: center;
-    margin-bottom: 7rem;
-  }
+span.undiscount {
+  visibility: hidden;
+}
 
-  Form input[type="text"] {
-    padding-top: 7px;
-    padding-right: 0px;
-    margin-right: 1.5rem;
-    border: 1px solid #fe7f50;
-    border-radius: 4px;
-  }
+.product-details .product-heading {
+  font-size: 44px;
+  color: #000000;
+}
 
-  Form button {
-    border: 1px solid #fe7f50;
-    border-radius: 4px;
-    background-color: #fe7f50;
-    color: #ffffff;
-    padding: 7px 10px;
-  }
+.product-details .details1 {
+  display: flex;
+  padding-top:0.5rem;
+}
 
-  /* Form .inputEmail {
-    padding-right: 0px;
-    margin-right: 2rem;
-    border: 1px solid #fe7f50;
-    border-radius: 15px;
-  } */
+.pointer { 
+    cursor: pointer; 
+}
 
-  .check {
-    width: 15px;
-    height: 20px;
-    margin-right: 0.5rem;
-  }
+.product-details .product-makemiles {
+  margin-right: 113px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  font-size: 1.5rem;
+  font-weight: 100;
+}
 
-  .top1, .top2, .top3 {
-    display: flex;
-    align-content:flex-start;
-    /* flex-direction: column; */
-  }
+.product-details .product-city-year {
+  display: flex;
+  flex-direction: column;
+}
 
-  .top1 {
-    margin-top: 2rem;
-  }
+.product-details .product-makemiles h4 {
+  font-size: 29px;
+}
 
-  .top1 h4 {
-    font-size: 1.1rem;
-  }
+.product-details .product-city-year h6 {
+  font-size: 18px;
+}
 
-  .top2 h4 {
-    font-size: 1.1rem;
-  }
+.product-details .product-info {
+  display: inline-block;
+    margin-bottom: 0px;
+  font-size: 37px;
+  color: #000000;
+}
 
-  .top3 h4 {
-    font-size: 1.1rem;
-  }
+.product-details p {
+  font-size: 20px;
+  color: #707070;
+  max-width: 920px;
+  text-align: left;
+}
 
-  .carousel {
-    margin-top: 1rem;
-  } 
+.product-details .product-price {
+  font-size: 30px;
+  margin-right: 30px;
+}
 
-  .pChange {
-    color:black;
-    /* background-color: #FE7F50;  */
-    font-size: 1rem;
-  }
-  
-  .pContact:after {
-    content:"";
-    animation: spin 2s linear infinite;
-  }
-  
-  @keyframes spin {
-    0% {
-      content:"ipsum";
-    }
-    10% {
-      content:"dolor";
-    }
-    20% {
-      content:"sit";
-    }
-    30% {
-      content:"amet";
-    }
-    40% {
-      content:"consectetur";
-    }
-    50% {
-      content: "adipisicing";
-    }
-    60% {
-      content: "elit";
-    }
-    70% {
-      content: "Hic";
-    }
-    80% {
-      content: "atque";
-    }
-    90% {
-      content: "fuga";
-    }
-  }
+.product-details button {
+  padding: 10px 20px;
+  background-color: #ffffff;
+  color: white;
+  border: none;
+}
 
+.product-details img {
+  margin-top: -15px;
+  width: 44px;
+  height: 40px;
+}
+
+.h1Carousel {
+  margin-left: 2rem;
+  margin-top: 2rem;
+}
+
+.carousel {
+  display: flex;
+  flex-direction: column;
+}
 
 @media (max-width: 800px) {
 
-  .product-page {
-      margin: 15px auto 0 auto;
-    }
+.product-page {
+    margin: 15px auto 0 auto;
+  }
 
-    .rowContainer {
-      display: flex;
-      justify-content: space-evenly;
-      /* align-items: center; */
-    }
+  .rowContainer {
+    justify-content: center;
+    align-items: center;
+  }
 
-    .colContanier {
-      padding-right: 0px;
-    }
-
-    .product-details {
-      margin-top: 50px;
-    }
-    
-  .product-details .details1 {
-      display: flex;
-      justify-content: space-between;
-    }
-
-    .product-details .product-makemiles {
-      font-size: 25px;
-      margin-right: 0;
-      display: flex;
-      justify-content: space;
-    }
-
-    .product-details .product-makemiles h4 {
-      font-size: 25px;
-    }
+  .product-details {
+    margin-top: 50px;
+  }
   
-    .product-details .product-city-year h6 {
-      font-size: 20px;
-    }
+.product-details .details1 {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .product-details .product-makemiles {
+    font-size: 25px;
+    margin-right: 0;
+    display: flex;
+    justify-content: space;
+  }
+
+  .product-details .product-makemiles h4 {
+    font-size: 25px;
+  }
+
+  .product-details .product-city-year h6 {
+    font-size: 20px;
+  }
 }
 @media (max-width: 500px){
-  span.purchasedBox {
-    padding: 10px 30px;
-    top: 100px;
-  }
-
-  span.discountTag {
-    top: 20px;
-    color: white;
-    padding: 12px 5px;
-  }
+span.purchasedBox {
+  padding: 10px 30px;
+  top: 100px;
 }
 
-
+span.discountTag {
+  top: 20px;
+  color: white;
+  padding: 12px 5px;
+}
+}
